--- a/q&a.html
+++ b/q&a.html
@@ -31,7 +31,7 @@
 	                    <span class="icon-bar"></span>
 	                    <span class="icon-bar"></span>
 	                </button>
-	                <!-- <a class="navbar-brand" href="index.html" style="color: black;">Introdução</a> -->
+	             <a class="navbar-brand" href="index.html" style="color: black;">SDN</a>
 	            </div>
 
 	            <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,8 +71,19 @@
 	        <!-- /.container -->
 	    </nav>
 
-
-	    <br><br><br><br><br><br><br>
+		<br><br>
+	    <h2 align="center">Perguntas e Respostas</h2>
+		
+		<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+		<p>1) Quais os principais problemas da rede atual, que as SDNs tentam resolver?</p>
+			<ul>
+			<li>Dificuldade na criação e implementação de novas aplicações de rede e/ou novos protocolos, devido a Internet precisar ser estável e a inteligência da rede estar concentrada nas extremidades;</li>
+			<li>Rede extremamente complexa, difícil de gerenciar e de encontrar as falhas;</li>
+			<li>Não garante qualidade de serviço;</li>
+			<li>Não garante segurança;</li>
+			</ul>
+		</div>
+		
 	    <!-- Footer -->
 	    <footer>
 	        <div class="container">
