--- a/security.html
+++ b/security.html
@@ -31,7 +31,7 @@
 	                    <span class="icon-bar"></span>
 	                    <span class="icon-bar"></span>
 	                </button>
-	                <!-- <a class="navbar-brand" href="index.html" style="color: black;">Introdução</a> -->
+	                <a class="navbar-brand" href="index.html" style="color: black;">SDN</a>
 	            </div>
 
 	            <!-- Collect the nav links, forms, and other content for toggling -->
