--- a/q&a.html
+++ b/q&a.html
@@ -82,6 +82,27 @@
 			<li>Não garante qualidade de serviço;</li>
 			<li>Não garante segurança;</li>
 			</ul>
+		<p>2) Quais são os principais benefícios que as SDNs trouxeram para segurança da rede?</p>
+			<ul>
+			<li>Flexibilidade e menor custo: devido a capacidade de instalar as aplicações de segurança nos comutadores ou adicionando funcionalidades ao controlador centralizado, sem que haja necessidade de utilização de <i>hardware</i> especializado para realização dessa tarefa;</li>
+			<li>Implementabilidade: devido a capacidade de configuração das aplicações que estarão presentes nos comutadores e no controlador por meio da utilização de APIs;</li>
+			</ul>
+		<p>3) Quais são as principais vantagens e desvantagens da utilização de um controlador centralizado?</p>
+			<ul>
+			<li>Vantagens:
+				<ul>
+					<li>A resposta à queda de nós e de enlaces deve ser mais rápida;</li>
+					<li>A tarefa de evitar <i>loops</i> na rede deve ser mais simples;</li>
+				</ul>
+			</li>
+			<li>Desvantagens:
+				<ul>
+					<li>Ponto único de falha;</li>
+					<li>O controle torna-se um alvo prioritário para os atacantes;</li>
+					<li>Não é escalável;</li>
+				</ul>
+			</li>
+			</ul>
 		</div>
 		
 	    <!-- Footer -->
