Atualizando texto de Aplicações e implementando links para as refencias(somente para motivação, aplicação e segurança)

--- a/motivation.html
+++ b/motivation.html
@@ -89,7 +89,7 @@
 			
 			<center>
 			<img src="images/motivation.png" alt="Redes Programáveis" height="500" width="1000">
-			<h5>Figura 1: A evolução das redes programáveis. Imagem retirada do artigo [22]</h5>
+			<h5>Figura 1: A evolução das redes programáveis. Imagem retirada do artigo [<a href="references.html#id22">22</a>]</h5>
 			</center>
 			
 			<br><br>
