--- a/references.html
+++ b/references.html
@@ -3,7 +3,7 @@
 	<head>
 
 	    <meta charset="utf-8">
-	    <title>SDN - Software Definied Network</title>
+	    <title>SDN - Software Defined Network</title>
 
 	    <!-- Bootstrap Core CSS -->
 	    <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -100,6 +100,7 @@
 	    	<p id="23">[23]  S. Shin, V. Yegneswaran, P. Porras, and G. Gu. “AVANT-GUARD: Scalable and Vigilant Switch Flow Management in Software-defined Networks. In Proc. ACM SIGSAC Conference on Computer and Communications Security (CCS), 2013.”</p>
 	    	<p id="24">[24] Doug Marschke, Jeff Doyle and Pete Moyer. “Software Defined Networking (SDN): Anatomy of OpenFlow Volume I.”</p>
 	    	<p id="25">[25] Pate, P. “NFV and SDN: What’s the Difference?”</p>
+	    	<p id="26">[26] Pitt, D. “Understanding OpenFlow, VXLAN and Cisco's ACI”</p>
 	    </div>
 	    
 	    <!-- Footer -->
