--- a/motivation.html
+++ b/motivation.html
@@ -3,7 +3,7 @@
 	<head>
 
 	    <meta charset="utf-8">
-	    <title>SDN - Software Definied Network</title>
+	    <title>SDN - Software Defined Network</title>
 
 	    <!-- Bootstrap Core CSS -->
 	    <link href="css/bootstrap.min.css" rel="stylesheet">
