Pergunta de Arquitetura ajustada

--- a/q&a.html
+++ b/q&a.html
@@ -109,12 +109,12 @@
 			<ul>
 				<li>
 
-					Plano de Gerenciamento: Realiza a interface entre o administrador da rede e a SDN. Nesse plano, se concentram as aplicações de rede, que obtêm estatísticas sobre a rede e enviam especificações da rede desejada por meio da <i>Northbound Interface</i>.
+					Plano de Gerenciamento: Realiza a interface entre o administrador da rede e a SDN. Nesse plano, se concentram as aplicações de rede, que obtêm estatísticas sobre a rede e enviam especificações da rede desejada por meio da <i>Northbound Interface</i>. O administrador da rede, pelo plano de gerenciamento, obtem uma versão abstraída da rede.
 
 				</li>
 
 				<p></p>
-				
+
 				<li>
 
 					Plano de Controle: Concentra a “inteligência” da rede. Composto pelo Sistema Operacional da Rede (NOS), ele fornece estatísticas sobre a rede e informações sobre a topologia pela <i>Northbound Interface</i> e realiza distribuição de configurações para roteadores, descoberta de dispositivos e roteamento através da <i>Southbound Interface</i>. Através dessa interface, ele recebe também estatísticas sobre a rede, que são processadas e enviadas pela <i>Northbound Interface</i>.
